feat: Добавлен отступ между задачами

--- a/src/pages/_main_style.scss
+++ b/src/pages/_main_style.scss
@@ -51,6 +51,7 @@ ul {
   flex-direction: column;
   align-items: center;
   justify-items: center;
+  gap: 25px;
 
   .no-tasks {
     border-top: 3px solid #ff8303;
