--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -75,6 +75,7 @@ ul {
   flex-direction: column;
   align-items: center;
   justify-items: center;
+  gap: 25px;
 }
 ul .no-tasks {
   border-top: 3px solid #ff8303;
