Добавлено меню задачам

--- a/src/pages/_main_style.scss
+++ b/src/pages/_main_style.scss
@@ -110,6 +110,11 @@ ul {
       display: flex;
       margin-top: 1%;
       align-self: flex-end;
+      display: flex;
+
+      .visible {
+        display: none;
+      }
 
       button {
         align-items: center;
