--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -137,6 +137,10 @@ ul li .menu {
   display: flex;
   margin-top: 1%;
   align-self: flex-end;
+  display: flex;
+}
+ul li .menu .visible {
+  display: none;
 }
 ul li .menu button {
   align-items: center;
