feat: Меню появляется при нажатии на контейнер задачи

--- a/src/pages/_main_style.scss
+++ b/src/pages/_main_style.scss
@@ -110,10 +110,10 @@ ul {
       display: flex;
       margin-top: 1%;
       align-self: flex-end;
-      display: flex;
+      display: none;
 
-      .visible {
-        display: none;
+      &.visible {
+        display: flex;
       }
 
       button {
