--- a/src/pages/_main_style.scss
+++ b/src/pages/_main_style.scss
@@ -16,6 +16,7 @@
 
     input {
       @include yellow-bordered;
+      font-family: "Roboto", sans-serif;
       font-size: 20px;
       margin-top: 1%;
       height: 50%;
@@ -84,16 +85,14 @@ ul {
       width: 100%;
       padding: 1% 1% 1% 1%;
       justify-content: space-between;
+      color: #f0e3ca;
+      font-family: "Roboto", sans-serif;
 
-      &__text {
-        display: flex;
-        flex-direction: column;
-        h1 {
-          color: #f0e3ca;
-        }
-        h2 {
-          color: #f0e3ca;
-        }
+      h1 {
+        font-weight: 500;
+      }
+      h2 {
+        font-weight: 400;
       }
     }
 
