--- a/src/styles/_common.scss
+++ b/src/styles/_common.scss
@@ -1,3 +1,17 @@
+@font-face {
+  font-family: Roboto;
+  src: url("../../assets/fonts/roboto/Roboto-Regular.ttf");
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: Inter;
+  src: url("../../assets/fonts/inter/static/Inter_24pt-Regular.ttf");
+  font-weight: normal;
+  font-style: normal;
+}
+
 * {
   margin: 0;
   padding: 0;
