build: Стили из scss файла разделены на два отдельных

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,3 +1,4 @@
 /*# sourceMappingURL=style.css.map */
 @import "./common";
-@import "../pages/main_style";
+@import "./set_task_style";
+@import "./task_list_style";
