add: Добавлен файл со стилями для окна подтверждения удаления

--- a/src/styles/_task_list_style.scss
+++ b/src/styles/_task_list_style.scss
@@ -20,6 +20,7 @@ ul {
     padding: 1% 0% 1% 0%;
     display: flex;
     justify-content: center;
+    white-space: nowrap;
 
     h1 {
       font-family: "Inter", sans-serif;
