feat: Окно с подтверждением удаления перекрывает все остальные элементы

--- a/src/styles/_common.scss
+++ b/src/styles/_common.scss
@@ -19,7 +19,8 @@
 }
 
 body {
-  background-color: #1b1a17;
+  // background-color: #1b1a17;
+  background-color: whitesmoke;
   display: flex;
   justify-content: center;
   align-items: center;
