--- a/src/styles/_delete_task_style.scss
+++ b/src/styles/_delete_task_style.scss
@@ -1,33 +1,44 @@
-.delete-task {
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.5);
   display: flex;
-  flex-direction: column;
-  border-top: 5px solid #a35709;
-  position: relative;
-  background-color: #1b1a17;
-  border-bottom-left-radius: 5px;
-  border-bottom-right-radius: 5px;
-  width: 256px;
-  height: 128px;
-  justify-content: space-around;
+  justify-content: center;
   align-items: center;
 
-  h1 {
-    color: white;
-    font-family: "Roboto", sans-serif;
-    font-weight: 400;
-    font-size: 18px;
-    padding-top: 5%;
-  }
-
-  &__buttons {
+  .delete-task {
     display: flex;
-    justify-content: center;
-    gap: 5%;
+    flex-direction: column;
+    border-top: 5px solid #a35709;
+    background-color: #1b1a17;
+    border-bottom-left-radius: 5px;
+    border-bottom-right-radius: 5px;
+    width: 256px;
+    height: 128px;
+    justify-content: space-around;
+    align-items: center;
 
-    button {
-      @include yellow-bordered;
-      width: 64px;
-      height: 24px;
+    h1 {
+      color: white;
+      font-family: "Roboto", sans-serif;
+      font-weight: 400;
+      font-size: 18px;
+      padding-top: 5%;
+    }
+
+    &__buttons {
+      display: flex;
+      justify-content: center;
+      gap: 5%;
+
+      button {
+        @include yellow-bordered;
+        width: 64px;
+        height: 24px;
+      }
     }
   }
 }
