--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -18,7 +18,7 @@
 }
 
 body {
-  background-color: #1b1a17;
+  background-color: whitesmoke;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -165,11 +165,21 @@ ul .task .menu button {
   justify-content: center;
 }
 
-.delete-task {
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.overlay .delete-task {
   display: flex;
   flex-direction: column;
   border-top: 5px solid #a35709;
-  position: relative;
   background-color: #1b1a17;
   border-bottom-left-radius: 5px;
   border-bottom-right-radius: 5px;
@@ -178,19 +188,19 @@ ul .task .menu button {
   justify-content: space-around;
   align-items: center;
 }
-.delete-task h1 {
+.overlay .delete-task h1 {
   color: white;
   font-family: "Roboto", sans-serif;
   font-weight: 400;
   font-size: 18px;
   padding-top: 5%;
 }
-.delete-task__buttons {
+.overlay .delete-task__buttons {
   display: flex;
   justify-content: center;
   gap: 5%;
 }
-.delete-task__buttons button {
+.overlay .delete-task__buttons button {
   background-color: #1b1a17;
   border: 2px solid #ff8303;
   border-radius: 8px;
@@ -198,7 +208,7 @@ ul .task .menu button {
   width: 64px;
   height: 24px;
 }
-.delete-task__buttons button:hover {
+.overlay .delete-task__buttons button:hover {
   color: #393939;
   border: 2px solid #a35709;
   background-color: #1f1e1b;
