feat: Удаление задач происходит через окно подтверждения

--- a/src/styles/_common.scss
+++ b/src/styles/_common.scss
@@ -19,8 +19,7 @@
 }
 
 body {
-  // background-color: #1b1a17;
-  background-color: whitesmoke;
+  background-color: #1b1a17;
   display: flex;
   justify-content: center;
   align-items: center;
