--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -18,7 +18,7 @@
 }
 
 body {
-  background-color: whitesmoke;
+  background-color: #1b1a17;
   display: flex;
   justify-content: center;
   align-items: center;
