--- a/src/styles/_overlay_style.scss
+++ b/src/styles/_overlay_style.scss
@@ -98,4 +98,25 @@
       }
     }
   }
+
+  .share {
+    padding-top: 15px;
+    display: flex;
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
+    background-color: #1b1a17;
+    align-self: flex-end;
+    width: 310px;
+    height: 70px;
+    gap: 10px;
+    justify-content: center;
+
+    button {
+      background-color: #1b1a17;
+      border: 2px solid #23221f;
+      border-radius: 50%;
+      width: 50px;
+      height: 50px;
+    }
+  }
 }
