--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -288,4 +288,23 @@ ul .task .menu button {
   color: #393939;
   border: 2px solid #a35709;
   background-color: #1f1e1b;
+}
+.overlay .share {
+  padding-top: 15px;
+  display: flex;
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
+  background-color: #1b1a17;
+  align-self: flex-end;
+  width: 310px;
+  height: 70px;
+  gap: 10px;
+  justify-content: center;
+}
+.overlay .share button {
+  background-color: #1b1a17;
+  border: 2px solid #23221f;
+  border-radius: 50%;
+  width: 50px;
+  height: 50px;
 }/*# sourceMappingURL=styles.css.map */
