--- a/src/styles/_set_task_style.scss
+++ b/src/styles/_set_task_style.scss
@@ -10,6 +10,9 @@
     display: flex;
     flex-direction: column;
     width: 100%;
+    @media (max-width: 450px) {
+      width: 60%;
+    }
     padding-left: 1%;
     padding-right: 1%;
     gap: 10%;
