--- a/src/styles/_set_task_style.scss
+++ b/src/styles/_set_task_style.scss
@@ -11,7 +11,7 @@
     flex-direction: column;
     width: 100%;
     @media (max-width: 450px) {
-      width: 60%;
+      width: 55%;
     }
     padding-left: 1%;
     padding-right: 1%;
@@ -21,22 +21,22 @@
       @include yellow-bordered;
       font-family: "Roboto", sans-serif;
       font-size: 20px;
-      margin-top: 1%;
-      height: 50%;
+      margin-top: 0%;
+      height: 55%;
       padding: 0% 2% 0% 1%;
     }
   }
 
   button {
     @include yellow-bordered;
-    font-size: 200%;
+    font-size: 96px;
     color: #ff8303;
 
-    height: 100px;
-    width: 100px;
+    height: 120px;
+    width: 125px;
     border: 4px solid #ff8303;
 
-    margin: 1%;
+    margin: 0%;
     margin-left: 0;
     &:hover {
       border: 2px solid #a35709;
